-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.6.0
-
None
-
OSX 10.11
-
c0fabbe169a9678eb8df0505de54fdaf9fec1a3f
Add a line breakpoint.
Right click and edit the breakpoint.
There is a commands textarea, which should be executed when the breakpoint is hit.
Currently it does nothing if the debug engine is LLDB.
For Gerrit Dashboard: QTCREATORBUG-15585 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
155756,6 | Debugger: Add breakpoint commands for LLDB backend | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |